fix bug with text overflow

--- a/styles/Certificates.module.scss
+++ b/styles/Certificates.module.scss
@@ -73,6 +73,7 @@
   text-align: center;
   font-size: 1.5rem;
   font-weight: 700;
+  word-break: break-word;
 }
 
 .geekbrains {
@@ -83,6 +84,10 @@
 
   .gallery__img {
     aspect-ratio: 30/22;
+  }
+
+  .gallery__caption{
+    padding: $offset-basic *4 $offset-basic *5;
   }
 }
 
